# lucj-ffsim

./: .gitignore  .pre-commit-config.yaml  README.md  analyze.ipynb  overlap_mat.ipynb  plot.ipynb  pyproject.toml
scripts/: generate_molecular_data_c2.py  generate_molecular_data_ethene.py  generate_molecular_data_nitrogen_10e8o.py  generate_molecular_data_nitrogen_6e6o.py  plot_c2_8e8o.py  plot_c2_bootstrap_8e8o.py  plot_c2_bootstrap_repeat_8e8o.py  plot_c2_orb_opt_8e8o.py  plot_c2_orb_opt_n_reps_bootstrap_8e8o.py  plot_c2_orb_opt_special_8e8o.py  plot_ethene.py  plot_nitrogen.py  plot_nitrogen_10e8o.py  plot_nitrogen_10e8o_lm_hyperparameters.py  plot_nitrogen_6e6o.py  plot_nitrogen_bootstrap_10e8o.py  plot_nitrogen_bootstrap_repeat_10e8o.py  plot_nitrogen_orb_opt_10e8o.py  plot_nitrogen_orb_opt_n_reps_bootstrap_10e8o.py  run_c2-0.sh  run_c2-1.sh  run_c2_8e8o.py  run_c2_bootstrap_8e8o.py  run_c2_bootstrap_repeat_8e8o.py  run_c2_bootstrap_repeat_backward_8e8o.py  run_c2_bootstrap_repeat_backward_8e8o_long.py  run_c2_bootstrap_repeat_forward_8e8o.py  run_c2_bootstrap_repeat_forward_8e8o_long.py  run_c2_orb_opt_8e8o.py  run_c2_orb_opt_n_reps_bootstrap_8e8o.py  run_ethene.py  run_ethene_bootstrap.py  run_nitrogen-0.sh  run_nitrogen-1.sh  run_nitrogen.py  run_nitrogen_10e8o.py  run_nitrogen_10e8o_lm_hyperparameter.py  run_nitrogen_6e6o.py  run_nitrogen_bootstrap_10e8o.py  run_nitrogen_bootstrap_10e8o_long.py  (+7 more)
src/lucj_ffsim/: generate_molecular_data_ethene.py  lucj-bootstrap.py  lucj.py  plot.py  post_process.py
